# beaverstudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: animation.rs  artist.rs  bezier.rs  brush.rs  interpolate.rs  lib.rs  parametric.rs  rectangle.rs  shape.rs  trace.rs  vector.rs  video.rs
src/drawing/: mod.rs
src/geometry/: axes.rs  bezier.rs  circle.rs  linear_axes.rs  mod.rs  polygon.rs  rectangle.rs  shape.rs
